[lworld] Fix CDS heap dumping crashes

XMLWordPrintable

      When CDS Heap Dumping is enabled, there are a (at least) a couple of bugs causing crashes like:


      # Internal Error (c:\sb\prod\1764879362\workspace\open\src\hotspot\share\cds\aotMapLogger.cpp:514), pid=69644, tid=51076
      # assert(_buffer_start <= buffer_addr && buffer_addr < _buffer_end) failed: range check
      #
      # JRE version: (26.0) (fastdebug build )
      # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 26-jep401ea2-2025-12-04-2013580.coleen.phillimore.valhalla-matias-cds, mixed mode, sharing, tiered, compressed oops, compressed class ptrs, g1 gc, windows-amd64)
      # Problematic frame:
      # V [jvm.dll+0x29e8f7] AOTMapLogger::FakeOop::read_oop_at+0xc7

      And

      A fatal error has been detected by the Java Runtime Environment:
      #
      # Internal Error (/Users/cphillim/hg/valhalla-matias-cds/open/src/hotspot/share/runtime/synchronizer.cpp:675), pid=34623, tid=18947
      # assert(!obj->klass()->is_inline_klass()) failed: FastHashCode should not be called for inline classes
      #

      And one where the prototype header isn't saved for an FlatArrayKlass:

      # Internal Error (/Users/cphillim/hg/valhalla-matias-cds/open/src/hotspot/share/oops/flatArrayKlass.cpp:175), pid=25698, tid=8707
      # assert(UseCompactObjectHeaders || obj->is_flatArray()) failed: must be an flat array
      #

            Assignee:
            Coleen Phillimore
            Reporter:
            Coleen Phillimore
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: