8373442: [lworld] Fix CDS heap dumping crashes